Done updating price based on length of note

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <h1>Flaskr</h1>
+        <h1>BTC Note</h1>
         <ul>
             {% if g.user %}
                 <li><span>{{ g.user['user_id'] }}</span></li>
