--- a/flaskr/templates/note/note.html
+++ b/flaskr/templates/note/note.html
@@ -9,34 +9,14 @@
     <label for="address">BTC addres to send funds to</label><br>
     <input type="text" id="address" name="address" value="{{ address }}" readonly><br>
     <label for="note">Blockchain note:</label><br>
-    <input type="text" name="note" id="note" required oninput="calculateCost(this.value)"><br>
+    <input type="text" name="note" id="note" required><br>
     <p>Current cost of transaction: <span id="transaction-cost">0 BTC</span></p>
+    <input type="hidden" name="transaction_cost" id="transaction-cost-hidden" value="0">
     <input class="btn" type="submit" value="Send">
   </form>
+    <script
+        src="{{ url_for('static', filename='js/cost.js') }}"
+  type="module"
+    ></script>
 
-  <script>
-    function calculateCost(note) {
-      // Make AJAX request to Flask server to calculate transaction cost
-      fetch('/note/calculate_transaction_cost', {
-        method: 'POST',
-        body: new URLSearchParams({
-          'note': note
-        }),
-        headers: {
-          'Content-Type': 'application/x-www-form-urlencoded'
-        }
-      })
-      .then(response => response.json())
-      .then(data => {
-        // Update the displayed transaction cost
-        document.getElementById("transaction-cost").innerText = data.transaction_cost.toFixed(8) + " BTC";
-      })
-      .catch(error => console.error('Error:', error));
-    }
-
-    // Add event listener to input field
-    document.getElementById("note").addEventListener("input", function() {
-      calculateCost(this.value);
-    });
-  </script>
 {% endblock %}
